tests/expectations/compiler/constants/block_height_type_fail.out
Error [ETYC0372117]: Expected type `u64` but type `u32` was found.
    --> compiler-test:4:22
     |
   4 |         let x: u64 = block.height;
     |                      ^^^^^^^^^^^^
